Add tests for LoadAccounts

--- a/tests/DCoreTests.csproj
+++ b/tests/DCoreTests.csproj
@@ -13,4 +13,26 @@
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\src\DCore.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="TokenFiles\tokensParameterCount1 - Copy.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TokenFiles\tokensParameterCount1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TokenFiles\tokensEmpty.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TokenFiles\tokensParameterCount2.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TokenFiles\tokensParameterCount3.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
