--- a/src/DCore.csproj
+++ b/src/DCore.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.3.0" />
+    <PackageReference Include="Pastel" Version="2.1.0" />
   </ItemGroup>
 
 </Project>
