Add missing tests

--- a/tests/DCoreTests.csproj
+++ b/tests/DCoreTests.csproj
@@ -20,6 +20,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Languages\en-1.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Languages\en-2.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="TestToken.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
