--- a/docs/articles/toc.yml
+++ b/docs/articles/toc.yml
@@ -1,6 +1,6 @@
-- name: Introduction
-  href: intro.md
 - name: Quick Start
   href: quickstart.md
-- name: DiscordBot class
+- name: DiscordBot
   href: discordbot.md
+- name: Configuration
+  href: configuration.md
