--- a/src/DCore.csproj
+++ b/src/DCore.csproj
@@ -3,9 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>0.3.0</Version>
+    <Version>1.0.0</Version>
     <Authors>Matusson</Authors>
     <Company />
     <Description>A library providing common functionality for Discord.NET bots.</Description>
@@ -16,8 +16,8 @@
     <RepositoryUrl>https://github.com/Matusson/DCore</RepositoryUrl>
     <PackageTags>Discord, Discord.NET, discordapp, utility, bots</PackageTags>
     <PackageReleaseNotes>- Added other DI services to the DI container when registering</PackageReleaseNotes>
-    <AssemblyVersion>0.0.3.0</AssemblyVersion>
-    <FileVersion>0.0.3.0</FileVersion>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
